# Creative-AI-App

./: .gitignore  .gitlab-ci-backend.yml  .gitlab-ci-frontend.yml  .gitlab-ci.yml  LICENSE  README.md
backend/: Dockerfile  docker-compose.yml
backend/app/: pyproject.toml
backend/app/app/: main.py
backend/app/app/models/: feed.py
backend/app/app/utils/: websocket_utils.py
frontend/: .dockerignore  .env  .env.prod  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/.storybook/: preview.js  story.css
frontend/app/: globals.css  head.tsx  layout.tsx  page.tsx
frontend/app/feed/: page.tsx
frontend/components/Feed/: FeedImage.tsx  index.tsx
frontend/components/FeedContext/: FeedContext.tsx  FeedReducer.tsx  index.tsx
frontend/components/FeedImage/: FeedImage.tsx  index.tsx
frontend/components/FeedImages/: FeedFooter.tsx  FeedHeader.tsx  FeedImages.tsx  index.tsx
frontend/components/FeedPage/: BackgroundText.tsx  FeedFooter.tsx  FeedHeader.tsx  FeedPage.tsx  index.tsx
frontend/components/FeedSpeedDial/: FeedSpeedDial.tsx  index.tsx
frontend/components/ImageCard/: ImageCard.tsx  ImageInfo.tsx  ImageWithInfo.tsx  ImageWithReactions.tsx  ReactionsCount.tsx  ViewerCount.tsx  index.tsx
frontend/components/ImageDraggable/: ImageDraggable.tsx
frontend/components/ImageFeed/: ImageFeed.tsx  ImageHistory.tsx  index.tsx
frontend/contexts/: ImageContext.tsx
frontend/pages/: index.tsx
frontend/stories/: Feed.stories.tsx  ImageCard.stories.tsx  ImageFeed.stories.tsx  ImageHover.stories.tsx
(+9 files in other folders)
